@@ -1,0 +1,1 @@
+#include "../../powerpc32/power6/wcsrchr.c"
